# ShaderWorkshop

./: CMakeLists.txt  LICENSE  README.md
include/Assimp/: BaseImporter.h  cexport.h
lib/: assimp-vc140-mtd.lib  out.txt
res/models/: Monkey.fbx  Plane.fbx  ShaderBall.fbx
res/shaders/: shader.fs  shader.vs
res/textures/Bricks051_1K-PNG/: Credits.txt
res/textures/Wood018_1K-PNG/: Credits.txt
src/: AssimpHelper.cpp  AssimpHelper.h  main.cpp
